src/assets/main.scss
@mixin border-radius($radius) {
  border-radius: calc($radius);
  -webkit-border-radius: calc($radius);
  -moz-border-radius: calc($radius);
  -ms-border-radius: calc($radius);
  -o-border-radius: calc($radius);
}

@mixin transform($values...) {
  transform: $values;
  -webkit-transform: $values;
  -moz-transform: $values;
  -ms-transform: $values;
  -o-transform: $values;
}

@mixin hover-effect($color: #6c6c6c) {
  &:hover {
    cursor: pointer;
    background-color: $color;
  }
}

@mixin transition($values...) {
  transition: $values;
  -webkit-transition: $values;
  -moz-transition: $values;
  -ms-transition: $values;
  -o-transition: $values;
}

$BG_GRAY: #565656;
$BG_DARK_GRAY: #434343;

box-icon {
  pointer-events: none;
}

#version-tag {
  font-size: 0.75rem;
  font-weight: 700;
  border: 1px solid white;
  @include border-radius(0.3rem);
  padding: 0.3rem 0.5rem;
  background-color: #{$BG_DARK_GRAY};
}

html,
body,
#app {
  margin: 0;
  height: 100%;
  overflow: hidden;
  user-select: none;

  /* full screen background-color options */
  &::backdrop {
    background-color: inherit;
  }
  &:fullscreen {
    background-color: inherit;
  }
}

thead {
  border-bottom: 1px solid #56565610;
}

body {
  #menu-list {
    position: fixed;
    color: #ffffff;
    background-color: #{$BG_GRAY};
    .menu-item {
      color: inherit;
      font-weight: 700;
      background-color: inherit;
      padding: 0.5rem 1rem;
      min-width: 200px;
      font-size: 0.75em;
      @include hover-effect;
    }
  }
  #sub-list {
    position: fixed;
    color: #ffffff;
    background-color: #{$BG_GRAY};
    .menu-item {
      color: inherit;
      font-weight: 700;
      background-color: inherit;
      padding: 0.5rem 1rem;
      min-width: 200px;
      font-size: 0.75em;
      @include hover-effect;
    }
  }

  #app {
    display: flex;
    flex-direction: column;

    #header {
      color: #ffffff;
      background-color: #{$BG_GRAY};
      padding-top: 0.2rem;
      padding-bottom: 0.2rem;

      display: flex;
      gap: 1em;
      align-items: center;

      #brand {
        padding: 0.5rem;
        font-weight: 700;
        text-transform: capitalize;
        font-size: 1.5em;
        a {
          text-decoration: none;
          color: inherit;
        }
      }
    }

    #main {
      flex: 1;
      overflow-y: auto;
      display: flex;

      #board {
        overflow: auto;
        position: relative;
        flex: 1;
        display: flex;
        flex-direction: column;

        #sheet-tool {
          position: fixed;
          padding: 0.5rem;
          background-color: #ffffff;
          font-size: 0.8em;
          box-shadow: 0 0 1rem 0 $BG_GRAY;
          @include border-radius(0.3rem);

          .sheet-menu-list {
            display: flex;
            gap: 0.3rem;

            .sheet-menu {
              border: 1px solid #ccc;
              padding: 0.3rem 0.5rem;
              @include border-radius(0.3rem);

              &:hover {
                cursor: pointer;
                color: #ffffff;
                background-color: #e5752f;
              }
            }
          }
        }

        #wrap-sheets {
          width: inherit;
          height: inherit;
          flex: 1;
          display: flex;
          overflow: auto;
          // justify-content: center;
          align-items: start;
          padding: 2rem;

          table {
            box-shadow: 0 0 1rem 0.5rem #{$BG_GRAY}36;
            user-select: none;
            margin: auto;

            thead {
              .cell {
                @include hover-effect(#69aad856);
                &[selected] {
                  box-shadow: inset 0 0 0 999999999999px #69aad826;
                  filter: brightness(0.8);
                  -webkit-filter: brightness(0.8);
                }
              }
            }
            tbody {
              .cell {
                @include hover-effect(#83d86956);
                &[selected] {
                  box-shadow: inset 0 0 0 999999999999px #53c63026;
                  filter: brightness(0.8);
                  -webkit-filter: brightness(0.8);
                }
              }
            }
          }
        }

        #wrap-sheets-files {
          border-top: 1px solid #{$BG_GRAY};
          // width: 100%;
          overflow-x: auto;
          display: flex;
          // padding: 0 0.5rem 0.5rem 0.5rem;
          padding-left: 0.5rem;
          padding-right: 0.5rem;
          padding-bottom: 0.5rem;
          // border-collapse: collapse;

          .sheet {
            user-select: none;
            font-size: 0.7em;
            padding: 0.5rem;
            border: 1px solid #{$BG_GRAY};
            box-shadow: inset -0.1px 0 0 0 #{$BG_GRAY};
            border-top: none;
            border-bottom-left-radius: 0.3rem;
            border-bottom-right-radius: 0.3rem;

            @include transition(150ms ease-in-out);
            @include hover-effect(#{$BG_GRAY}56);

            &[current-sheet] {
              background-color: coral;
            }

            &:not(:last-of-type) {
              border-right: none;
            }
          }
        }
      }

      #panel {
        width: 0%;
        background-color: #{$BG_DARK_GRAY};
        overflow-y: auto;

        @include transition(150ms ease-in-out);

        &.open {
          // width: 30%;
        }

        .menu-wrap {
          color: #ffffff;
          display: flex;
          flex-direction: column;
          gap: 2rem;
          padding: 1rem;

          .menu-title {
            font-size: 1.2em;
            font-weight: 700;
            text-transform: uppercase;
          }

          .menu-list {
            display: flex;
            flex-direction: column;
            gap: 1rem;

            .panel {
              border: 1px solid #aaaaaaa6;
              padding: 1rem;
              @include border-radius(0.3rem);

              .panel-title {
                font-weight: 700;
              }

              .penl-tool {
                font-size: 0.8em;
              }

              .cell-concat-options {
                margin-top: 1rem;
                display: flex;
                gap: 0.3rem;
                justify-content: center;

                button {
                  display: flex;
                  flex-direction: row;
                  align-items: center;
                  border: none;
                  padding: 0.5rem 0.8rem;
                  font-size: 0.8rem;
                  font-weight: 700;
                  text-transform: uppercase;
                  @include border-radius(0.3rem);
                  background-color: #ccc;
                  &:hover {
                    cursor: pointer;
                    color: #ffffff;
                    background-color: #e5752f;
                  }
                }
              }

              #preview-color {
                background-color: white;
                width: 200px;
                height: 200px;
                margin-left: auto;
                margin-right: auto;
                margin-top: 1rem;
                margin-bottom: 1rem;
              }

              .palette {
                display: flex;
                flex-direction: column;

                .rgba {
                  position: relative;
                  margin-left: 1em;
                  &::before {
                    content: attr(name);
                    color: #ffffff;
                    position: absolute;
                    left: -1em;
                    text-transform: uppercase;
                  }
                }
              }

              .border-onoff {
                display: flex;
                flex-direction: column;
                text-align: center;

                &:not(.centered) > label {
                  flex: 1;
                }
                .centered {
                  flex: 1;
                  display: flex;
                  align-items: center;
                  justify-content: space-between;
                }
              }
            }
          }
        }
      }
    }

    #footer {
      padding: 1rem;
      text-align: center;
      font-weight: 700;
      color: #ffffff;
      background-color: #{$BG_GRAY};
    }
  }
}

.about-command {
  position: absolute;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  top: 50%;
  left: 50%;
  @include transform(translate(-50%, -50%));
  background-color: white;
  box-shadow: 0 0 10px 0 #56565656;

  .about-header {
    font-weight: 700;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    padding: 1rem;
    button {
      font-weight: 700;
      font-size: 1rem;
      cursor: pointer;
      border: none;
      @include border-radius(0.3rem);
      padding: 0.5rem 0.7rem;
      outline: none;
      &:active {
        box-shadow: inset 0 0 99999999px 0 #e5752f56;
      }
    }
  }

  .about-body {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
    min-width: 150px;
    padding: 1rem;
    min-height: 100px;
    overflow: auto;
    height: 80%;
    max-height: 70vh;
  }
}

.d-flex {
  display: flex;
}

.align-content-strech {
  align-content: stretch;
}

.align-content-center {
  align-content: center;
}

.align-items-strech {
  align-items: stretch;
}

.align-items-center {
  align-items: center;
}

@for $i from 1 to 11 {
  .gap-#{$i} {
    gap: calc($i * 0.25rem);
  }
}

.group-tab {
  $radius: 0.2rem;
  user-select: none;
  & .tab:first-of-type {
    border-top-left-radius: $radius;
    border-bottom-left-radius: $radius;
  }
  & .tab:last-of-type {
    border-top-right-radius: $radius;
    border-bottom-right-radius: $radius;
  }
  // box-shadow: 0 0 0.5rem 0 #23232356;
}

.tab {
  padding: 0.8rem 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;

  @include hover-effect;
}

.fw-bold {
  font-weight: 700;
}

.small {
  font-size: 0.8em;
}

.capitalize {
  text-transform: capitalize;
}

[un-touchable] {
  user-select: none;
  pointer-events: none;
}

form[name="renameForm"] {
  box-shadow: 0 0 1rem 0 #{$BG_GRAY}56;
  background-color: white;
  padding: 1rem;
  position: fixed;
  top: 50%;
  left: 50%;
  @include transform(translate(-50%, -50%));
  input {
    border: 1px solid #{$BG_DARK_GRAY};
    @include border-radius(0.3rem);
    padding: 0.3rem 0.5rem;
    outline: none;
  }
  button {
    cursor: pointer;
    border: none;
    @include border-radius(0.3rem);
    padding: 0.3rem 0.5rem;
    outline: none;
    &:active {
      box-shadow: inset 0 0 99999999px 0 #e5752f56;
    }
  }
}

